<resources>
    <string name="app_name">Smackchat</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="name_hint">Name</string>
    <string name="cell_phone_number">Cell phone number</string>
    <string name="send">Send</string>
    <string name="action_bar_search_contact">Search</string>
    <string name="add">Add friend</string>
    <string name="add_group">New group</string>
    <string name="chats">Chats</string>
    <string name="add_contact">Add contact</string>
    <string name="select_contact">Select contact</string>
    <string name="contacts">contacts</string>
    <string name="new_chat">New chat</string>
    <string name="search">Search:</string>
    <string name="search_contact_no_result">No result</string>
    <string name="search_contact_result">Search result</string>
    <string name="search_contact">Search contact</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="create_account_error">Create account error</string>
    <string name="account_already_exists">Account already exists</string>
    <string name="login_error">Login error</string>
    <string name="invalid_credentials">Invalid username/password</string>
    <string name="login_success">Login success</string>
    <string name="added">Added</string>
    <string name="accept">Accept</string>
    <string name="accepted">Accepted</string>
    <string name="new_contacts">New contacts</string>
    <string name="add_contact_text">wants to add you as a friend</string>
    <string name="contact_request_sent">Request sent, waiting for acceptance...</string>
    <string name="sending_contact_request_error">Sending request error</string>
    <string name="acceptance_text">I\'v accepted your request, let\'s chat</string>
    <string name="send_message">Send message</string>
    <string name="contact_profile">Contact profile</string>
    <string name="wait_for_acceptance">waiting for acceptance</string>
    <string name="delete">Delete</string>
    <string name="Copy">Copy</string>
    <string name="Forward">Forward</string>
    <string name="search_user_error">Search user error</string>
    <string name="no_network_connected">No network connected</string>
    <string name="new_messages"> new messages</string>
    <string name="settings">Setttings</string>
    <string name="status">Status</string>
    <string name="current_status">Your current status</string>
    <string name="select_status">Select your new status</string>
    <string name="default_status">Hey</string>
    <string name="no_status">***no status***</string>
    <string name="set_status_error">Set status error</string>
    <string name="update_status_text">update your status</string>
    <string name="profile_photo">Profile photo</string>
    <string name="no_chats_found">No chats found</string>
    <string name="no_contacts_found">No contacts found</string>
    <string name="incomplete_signup_info">Please input complete information</string>
    <string name="profile_avatar">Avatar</string>
    <string name="profile_nickname">Nick name</string>
    <string name="title_network_usage_fragment">Network Usage</string>
    <string name="title_profile_fragment">Profile</string>
    <string name="title_traffic_transmitted_preference">Traffic transmitted</string>
    <string name="title_traffic_received_preference">Traffic received</string>
    <string name="traffic_unit">KB</string>
    <string name="title_server_address">Server address</string>
    <string name="summary_server_address">Enter address of your Openfire server</string>
    <string name="server">Server</string>
    <string name="status_available">Available</string>
    <string name="status_busy">Busy</string>
    <string name="status_invisible">Invisible</string>
    <string name="status_away">Away</string>
    <string name="status_meeting">In a meeting</string>
    <string name="attach">Attach</string>
    <string name="gallery">Gallery</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="location">Location</string>
    <string name="send_image_error">Send image error</string>
    <string name="send_video_error">Send image error</string>
    <string name="image_message_body">Image</string>
    <string name="Video_message_body">Video</string>
    <string name="video_message_body">Video</string>
    <string name="recorder">Record</string>
    <string name="capture">Capture</string>
    <string name="new_group_created">created new group</string>
    <string name="invite_reason">added you to group</string>
    <string name="title_activity_group_info">GroupInfoActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="rename">Rename</string>
</resources>