<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/attach_options_container"
    android:layout_width="match_parent"
    android:layout_height="@dimen/attach_views_container_height"
    android:visibility="invisible"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/attach_options_container_vertical_padding"
        android:paddingLeft="@dimen/attach_options_container_horizontal_padding"
        android:paddingRight="@dimen/attach_options_container_horizontal_padding"
        android:paddingTop="@dimen/attach_options_container_vertical_padding">
        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="3"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/attach_from_gallery"
                android:layout_width="0dp"
                android:layout_height="@dimen/attach_option_size"
                android:layout_weight="1"
                android:background="@null"
                android:drawableTop="@drawable/attach_photo_background"
                android:text="@string/gallery"
                android:textColor="?android:attr/textColorSecondary" />

            <Button
                android:id="@+id/attach_video"
                android:layout_width="0dp"
                android:layout_height="@dimen/attach_option_size"
                android:layout_weight="1"
                android:background="@null"
                android:drawableTop="@drawable/attach_video_backgroung"
                android:text="@string/video"
                android:textColor="?android:attr/textColorSecondary" />


            <Button
                android:id="@+id/attach_location"
                android:layout_width="0dp"
                android:layout_height="@dimen/attach_option_size"
                android:layout_weight="1"
                android:background="@null"
                android:drawableTop="@drawable/attach_location_background"
                android:text="@string/location"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:weightSum="3"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/attach_camera"
                android:layout_width="0dp"
                android:layout_height="@dimen/attach_option_size"
                android:layout_weight="1"
                android:background="@null"
                android:drawableTop="@drawable/attach_camera_background"
                android:text="@string/capture"
                android:textColor="?android:attr/textColorSecondary" />
            <Button
                android:id="@+id/attach_recorder"
                android:layout_width="0dp"
                android:layout_height="@dimen/attach_option_size"
                android:layout_weight="1"
                android:background="@null"
                android:drawableTop="@drawable/attach_recorder_backgroung"
                android:text="@string/recorder"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>